--- a/Javascript Basic Function Programming/views/functions/index.ejs
+++ b/Javascript Basic Function Programming/views/functions/index.ejs
@@ -1,4 +1,7 @@
 Welcome to Javascript Class<br><br><br>
+
+<a href="/func_preps/test" >Test Page </a><br><br>
+
 <a href="/func_letctures/01" >Lecture One</a><br>
 <p>
 1.Show block of information under checkbox, and change the style <br>
