--- a/Javascript Basic Function Programming/views/functions/lectures/lecture04.ejs
+++ b/Javascript Basic Function Programming/views/functions/lectures/lecture04.ejs
@@ -3,22 +3,7 @@ lecture 04<br><br>
 
 <input id="btn1" type="button" value="abc"/><br><hr>
 
-<!-- <div id="div7"></div>
 <div id="div7"></div>
 <div id="div7"></div>
-<div id="div7"></div><br><hr> -->
-
-<input id="btn2" type="button" value="select_all"/><br><br>
-<input id="btn3" type="button" value="unselect_all"/><br><br>
-<input id="btn4" type="button" value="inverse selection"/><br><br>
-    <div id="div6">
-        <input type="checkbox" /><br>
-        <input type="checkbox" /><br>
-        <input type="checkbox" /><br>
-        <input type="checkbox" /><br>
-        <input type="checkbox" /><br>
-        <input type="checkbox" /><br>
-        <input type="checkbox" /><br>
-        <input type="checkbox" /><br>
-        <input type="checkbox" /><br>
-    </div>
+<div id="div7"></div>
+<div id="div7"></div>
